--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "joi": "^17.6.0",
